--- a/models/cnnModel.ipynb
+++ b/models/cnnModel.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,13 +100,14 @@
     "            epochs = 10,\n",
     "            verbose = 1, \n",
     "            callbacks = [callbacks])\n",
+    "    model.reset_metrics()\n",
     "    # model fitting\n",
     "    return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,9 +140,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (TensorFlow CPU Optimized)",
+   "display_name": "conda_amazonei_tensorflow_p36",
    "language": "python",
-   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:us-east-2:429704687514:environment/tensorflow-cpu-optimized"
+   "name": "conda_amazonei_tensorflow_p36"
   },
   "language_info": {
    "codemirror_mode": {
