--- a/models/cnnModel.ipynb
+++ b/models/cnnModel.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
     "    class myCallback(tf.keras.callbacks.Callback):\n",
     "        def on_epoch_end(self, epoch, logs={}):\n",
     "            if (logs.get('acc')>DESIRED_ACCURACY):\n",
-    "              print('\\nReached 99% accuracy so cancelling training!')\n",
+    "              print('\\nReached 90% accuracy so cancelling training!')\n",
     "              self.model.stop_training = True\n",
     "\n",
     "    from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
@@ -87,27 +87,26 @@
     "    val_generator = datagen.flow_from_directory(\n",
     "        val_dir,\n",
     "        target_size = (150, 150),  # All images will be resized to 150x150\n",
-    "        batch_size = 16,\n",
+    "        batch_size = 3,\n",
     "        class_mode = 'binary')\n",
     "\n",
     "    callbacks = myCallback()\n",
     "\n",
     "    history = model.fit(\n",
     "            train_generator,\n",
-    "            steps_per_epoch = 8,\n",
+    "            steps_per_epoch = 44,\n",
     "            validation_data = val_generator,\n",
     "            validation_steps = 4,\n",
-    "            epochs = 10,\n",
+    "            epochs = 3,\n",
     "            verbose = 1, \n",
     "            callbacks = [callbacks])\n",
-    "    model.reset_metrics()\n",
     "    # model fitting\n",
     "    return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,9 +123,9 @@
     "        img_stacked = np.vstack([img_batch])\n",
     "        classes = model.predict(img_stacked)\n",
     "        if (classes[0] < 0.5):\n",
-    "            print('This mathematical function is linear')\n",
+    "            print('This mathematical function is linear ' + str(classes[0]))\n",
     "        else:\n",
-    "            print('This mathematical function is squared')\n",
+    "            print('This mathematical function is squared '+ str(classes[0]))\n",
     "        "
    ]
   },
