--- a/main.ipynb
+++ b/main.ipynb
@@ -62,9 +62,9 @@
     "        #if len(os.listdir('data')) < 4:\n",
     "        #    dd.importImages()\n",
     "        #    dd.applyDataAugmentation(self.train_dir, 90)\n",
-    "        # if os.path.isfile(self.model_path):\n",
-    "        #    self.model = ms.loadModel(self.model_path)\n",
-    "        #    self.model.summary()\n",
+    "        if os.path.isfile(self.model_path):\n",
+    "            self.model = ms.loadModel(self.model_path)\n",
+    "            self.model.summary()\n",
     "        #else:     \n",
     "        #ms.createRandomLinearFunctions(50, 'test')\n",
     "        #ms.createRandomSquaredFunctions(50, 'test')\n",
@@ -272,7 +272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.10"
   },
   "toc-autonumbering": true,
   "toc-showmarkdowntxt": false,
