--- a/models/cnnModel.ipynb
+++ b/models/cnnModel.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,19 +61,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fit_model(model, train_dir, val_dir):\n",
-    "\n",
+    "def collect_callbacks():\n",
+    "    import datetime\n",
+    "    import os\n",
     "    DESIRED_ACCURACY = 0.99\n",
     "\n",
     "    class myCallback(tf.keras.callbacks.Callback):\n",
     "        def on_epoch_end(self, epoch, logs={}):\n",
     "            if (logs.get('acc')>DESIRED_ACCURACY):\n",
     "              print('\\nReached 90% accuracy so cancelling training!')\n",
-    "              self.model.stop_training = True\n",
+    "              self.model.stop_training = True           \n",
+    "    accuracy_callback = myCallback()\n",
+    "    \n",
+    "    log_dir = \"logs/\" + datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
+    "    tensorboard_callback = tf.keras.callbacks.TensorBoard(log_dir=log_dir, histogram_freq=1)\n",
+    "    \n",
+    "    return [accuracy_callback, tensorboard_callback]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fit_model(model, train_dir, val_dir, collected_callbacks):\n",
+    "    import datetime\n",
+    "    import os\n",
     "\n",
     "    from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
     "\n",
@@ -89,9 +107,9 @@
     "        target_size = (150, 150),  # All images will be resized to 150x150\n",
     "        batch_size = 3,\n",
     "        class_mode = 'binary')\n",
-    "\n",
-    "    callbacks = myCallback()\n",
-    "\n",
+    "    \n",
+    "    log_dir = \"logs/\" + datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
+    "    tensorboard_callback = tf.keras.callbacks.TensorBoard(log_dir=log_dir, histogram_freq=1)\n",
     "    history = model.fit(\n",
     "            train_generator,\n",
     "            steps_per_epoch = 44,\n",
@@ -99,19 +117,19 @@
     "            validation_steps = 4,\n",
     "            epochs = 3,\n",
     "            verbose = 1, \n",
-    "            callbacks = [callbacks])\n",
+    "            callbacks = [tensorboard_callback])\n",
     "    # model fitting\n",
     "    return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "def predict_images(image_paths, model):\n",
-    "    from keras.preprocessing import image as kimg\n",
+    "    from tf.keras.preprocessing import image as kimg\n",
     "    from PIL import Image as pimg\n",
     "    for image_path in image_paths:\n",
     "        plt.figure()\n",
@@ -153,7 +171,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
