--- a/models/cnnModel.ipynb
+++ b/models/cnnModel.ipynb
@@ -34,18 +34,13 @@
     "def create_Model():\n",
     "\n",
     "    model = tf.keras.models.Sequential([\n",
-    "        # Your Code Here\n",
     "        tf.keras.layers.Conv2D(16, (3,3), activation = 'relu', data_format = 'channels_last', input_shape = (150, 150, 3)),\n",
     "        tf.keras.layers.MaxPooling2D(2, 2),\n",
-    "        # The second convolution\n",
     "        tf.keras.layers.Conv2D(32, (3,3), activation = 'relu'),\n",
     "        tf.keras.layers.MaxPooling2D(2,2),\n",
-    "        # The third convolution\n",
     "        tf.keras.layers.Conv2D(64, (3,3), activation = 'relu'),\n",
     "        tf.keras.layers.MaxPooling2D(2,2),\n",
-    "        # Flatten the results to feed into a DNN\n",
     "        tf.keras.layers.Flatten(),\n",
-    "        # 512 neuron hidden layer\n",
     "        tf.keras.layers.Dense(128, activation = 'relu'),\n",
     "        tf.keras.layers.Dense(1, activation = 'sigmoid')\n",
     "    ])\n",
@@ -61,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +68,7 @@
     "    class myCallback(tf.keras.callbacks.Callback):\n",
     "        def on_epoch_end(self, epoch, logs={}):\n",
     "            if (logs.get('acc')>DESIRED_ACCURACY):\n",
-    "              print('\\nReached 90% accuracy so cancelling training!')\n",
+    "              print('\\nReached 99% accuracy so cancelling training!')\n",
     "              self.model.stop_training = True           \n",
     "    accuracy_callback = myCallback()\n",
     "    \n",
@@ -85,13 +80,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def fit_model(model, train_dir, val_dir, collected_callbacks):\n",
-    "    import datetime\n",
-    "    import os\n",
     "\n",
     "    from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
     "\n",
@@ -108,8 +101,6 @@
     "        batch_size = 3,\n",
     "        class_mode = 'binary')\n",
     "    \n",
-    "    log_dir = \"logs/\" + datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
-    "    tensorboard_callback = tf.keras.callbacks.TensorBoard(log_dir=log_dir, histogram_freq=1)\n",
     "    history = model.fit(\n",
     "            train_generator,\n",
     "            steps_per_epoch = 44,\n",
@@ -117,19 +108,19 @@
     "            validation_steps = 4,\n",
     "            epochs = 3,\n",
     "            verbose = 1, \n",
-    "            callbacks = [tensorboard_callback])\n",
-    "    # model fitting\n",
+    "            callbacks = collected_callbacks)\n",
+    "    \n",
     "    return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def predict_images(image_paths, model):\n",
-    "    from tf.keras.preprocessing import image as kimg\n",
+    "    from tensorflow.keras.preprocessing import image as kimg\n",
     "    from PIL import Image as pimg\n",
     "    for image_path in image_paths:\n",
     "        plt.figure()\n",
